# qBerryOS

./: Cargo.toml  README.md  build.rs  config.toml  install-qkey.sh  install.sh  qkey-client.bat  qkey-server.service  qkey-server.sh  qkey.exe.manifest
.github/workflows/: release.yml
logo/: QBerry.icns
win/: blocklist.txt  qkey-client.bat
