[package]
name = "qkey"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qkey"
path = "../qrvn/src/main.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1.0.100"          # Error handling
byteorder = "1.5.0"         # Byte order operations
bytes = "1.10.1"            # Byte buffer utilities
env_logger = "0.11.8"       # Logging configuration
log = "0.4.28"              # Logging facade
etherparse = "0.19.0"       # Packet parsing
ring = "0.17.14"            # Cryptographic operations
saorsa-pqc = "0.3.13"       # Post-quantum cryptography
rand = "0.9.2"              # Random number generation
clap = { version = "*", features = ["derive", "env"] }
clap-serde-derive = "*"
serde = { version = "1.0", features = ["derive"] }
toml = "*"
tokio = { version = "1.47.1", features = ["full"] } # Async runtime
tokio-stream = "0.1"
tun-rs = { version = "2", features = ["async"] }
nix = { version = "0.30.1", features = ["user"] } # Unix system calls
dashmap = "6.1.0"
lz4_flex = "0.11"
regex = "1.11"
trust-dns-proto = "0.23.2"
trust-dns-resolver = "0.23.2"
sysinfo = "*"
sha2 = "*"
uuid = { version = "*", features = ["v4"] }
parking_lot = "*"
actix-web = "*"
actix-web-metrics = "*"
webbrowser = "*"
prometheus = "*"
metrics-exporter-http = "*"
reqwest = { version = "*", features = ["json"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "*", features = [
    "Win32_System_SystemInformation",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security"
] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

