[workspace]
members = [
    "qberry-core",
    "qberry-cli",
    "qberry-gui/src-tauri",
    #"qberry-ui",
    "qberry-wasm",
    "ps-core",
    "ps-wasm",
]
resolver = "2"
repository = "https://github.com/yui0/qkey"
homepage = "https://github.com/yui0/qkey"
authors = ["Yuichiro Nakada"]
description = "QFKEY Post-Quantum Mesh VPN"
license = "UNLICENSED"

[workspace.dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
toml = "*"

[patch.crates-io]
just-webrtc = { path = "libs/just-webrtc" }
scrap = { path = "libs/scrap" }

[profile.small]
inherits = "release"
#debug = true
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true

